Configure dynamic menu items

--- a/web/src/main/resources/templates/fragments/navigation.html
+++ b/web/src/main/resources/templates/fragments/navigation.html
@@ -8,16 +8,16 @@
                 class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mt-2 mt-lg-0">
-                <li th:class="| nav-item ${page == home? 'active':''}|">
+                <li th:class="| nav-item ${currentPage == home? 'active':''}|">
                     <a class="nav-link" th:href="@{~/}">Home</a>
                 </li>
-                <li th:class="| nav-item ${page == register? 'active':''}|">
+                <li th:class="| nav-item ${currentPage == register? 'active':''}|">
                     <a class="nav-link" th:href="@{~/register}">Register</a>
                 </li>
-                <li th:class="| nav-item ${page == about? 'active':''}|">
+                <li th:class="| nav-item ${currentPage == about? 'active':''}|">
                     <a class="nav-link" th:href="@{~/about}">About</a>
                 </li>
-                <li th:class="| nav-item ${page == contact? 'active':''}|">
+                <li th:class="| nav-item ${currentPage == contact? 'active':''}|">
                     <a class="nav-link" th:href="@{~/contact}">Contact</a>
                 </li>
                 <li class="nav-item">
@@ -29,28 +29,22 @@
 </nav>
 
 
-<div th:fragment="sidebar" class="border-end bg-white" id="sidebar-wrapper" xmlns:th="http://www.thymeleaf.org">
+<div th:fragment="sidebar" class="border-end bg-white" id="sidebar-wrapper" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
     <div class="sidebar-heading border-bottom navbar-light bg-light">
-        <a class="navbar-brand"></a>
+        <a class="navbar-brand" sec:authorize="isAuthenticated()">Hi <span sec:authentication="name"></span>!</a>
+        <a class="navbar-brand" sec:authorize="isAnonymous()">Hi Developer</a>
     </div>
+    <!-- Sidebar Menu Items -->
     <div class="list-group list-group-flush">
-        <a th:class="| list-group-item list-group-item-action list-group-item-light p-3 ${page == 'dashboard'? 'active':''} |"
-           th:href="@{dashboard}">
-            <span class="material-symbols-outlined">house</span>Dashboard</a>
-        <a th:class="| list-group-item list-group-item-action list-group-item-light p-3 ${page == 'marketplace'? 'active':''} |"
-           th:href="@{marketplace}">
-            <span class="material-symbols-outlined">work</span>Jobs & Placements</a>
-        <a th:class="| list-group-item list-group-item-action list-group-item-light p-3 ${page == 'forum'? 'active':''} |"
-           th:href="@{forum}">
-            <span class="material-symbols-outlined">forum</span>Forum</a>
-        <a th:class="| list-group-item list-group-item-action list-group-item-light p-3 ${page == 'resume-management'? 'active':''} |"
-           th:href="@{resume-management}">
-            <span class="material-symbols-outlined">contact_page</span>Resume Management</a>
-        <a th:class="| list-group-item list-group-item-action list-group-item-light p-3 ${page == 'profile'? 'active':''} |"
-           th:href="@{profile}">
-            <span class="material-symbols-outlined">manage_accounts</span>Profile</a>
-        <a class="list-group-item list-group-item-action list-group-item-light p-3" id="logout-sidebar-bottom"
-           th:href="@{~/}">
+        <div th:each="element: ${menuElements}">
+            <a  th:class="| list-group-item list-group-item-action list-group-item-light p-3 ${currentPage == element.page? 'active':''} |"
+                th:href="@{${element.path}}">
+                <span class="material-symbols-outlined" th:text="${element.icon}">house</span>
+                <span th:text="${element.displayName}"></span>
+            </a>
+        </div>
+            <a class="list-group-item list-group-item-action list-group-item-light p-3" id="logout-sidebar-bottom"
+                th:href="@{~/}">
             <span class="material-symbols-outlined">logout</span>Logout</a>
     </div>
 </div>
