Add dynamic page title

--- a/web/src/main/resources/templates/fragments/head.html
+++ b/web/src/main/resources/templates/fragments/head.html
@@ -1,5 +1,5 @@
 <head th:fragment="head" xmlns:th="http://www.thymeleaf.org">
-  <title th:text="${title}">Title here</title>
+  <title th:text="|Wilma - ${#strings.capitalize(currentPage)}|">Title here</title>
   <!-- HTML Meta Tags -->
   <meta charset="utf-8" />
   <meta name="title" content="WILMA - Work Integrated Learning Management App">
