--- a/web/src/main/resources/templates/educator/marketplace.html
+++ b/web/src/main/resources/templates/educator/marketplace.html
@@ -4,8 +4,9 @@
 <head th:replace="fragments/head"></head>
 <link th:href="@{~/css/portal-styles.css}" rel="stylesheet" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,500,0,0" />
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
 
-<body>
+<body onload="hidePositionsPendingTableIfEmpty()">
     <div class="d-flex" id="wrapper">
         <!-- Sidebar Menu -->
         <div th:replace="fragments/navigation :: sidebar"></div>
@@ -22,10 +23,6 @@
                     </ol>
                 </nav>
 
-                <div class="input-group w-25 mx-auto">
-                    <input class="form-control" id="positionsFilter" type="text" name="keyword" placeholder="Filter Positions..." />
-                </div>
-
                 <h1 class="text-center m-3">Jobs & Placements</h1>
 
                 <div th:replace="fragments/marketplace-tables :: pending-approval"></div>
@@ -36,7 +33,7 @@
         </div>
     </div>
     <div th:replace="fragments/scripts"></div>
-    
+
 </body>
 
 </html>
