--- a/web/src/main/resources/templates/fragments/marketplace-tables.html
+++ b/web/src/main/resources/templates/fragments/marketplace-tables.html
@@ -1,10 +1,16 @@
 
 <!-- Jobs & Placements that are still pending approval -->
 <div th:fragment="pending-approval" id="pending-approval" xmlns:th="http://www.thymeleaf.org">
-    <h1 class="table-heading">Pending Approval</h1>
+    
+    <div class="row">
+        <div class="col-12 col-md-4 col-lg-4 col-xl-3"><h1 class="table-heading">Pending Approval</h1></div>
+        <div class="col-12 col-md-7 col-lg-8 col-xl-6"><input class="form-control" id="pendingApprovalFilter" type="text" name="keyword" placeholder="Filter Positions..." /></div>
+        <div class="col-md-1 col-xl-3"></div>
+    </div>
+    
     <div class="row table-container">
-        <table class="table table-striped table-hover">
-            <thead class="pending-approval-table-header">
+        <table class="table table-sm table-danger table-striped table-hover">
+            <thead>
                 <tr>
                     <th>ID</th>
                     <th>Type</th>
@@ -16,48 +22,54 @@
                 </tr>
             </thead>
             <tbody id="pendingPositionsData">
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Job</td>
-                    <td>Microsoft</td>
-                    <td>1/12/2022</td>
-                    <td>24/12/2022</td>
-                    <td>Just a one month job</td>
+                <tr th:each="pos : ${pendingPositions}">
+                    <th scope="row" th:text="${pos.id}"></th>
+                    <td th:text="${pos.type}">Job</td>
+                    <td th:text="${pos.partner.businessName}">Microsoft</td>
+                    <td th:text="${#dates.format(pos.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
+                    <td th:text="${#dates.format(pos.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
+                    <td th:text="${pos.description}">Just a one month job</td>
                     <td style="display: flex;">
                         <div class="mx-auto">
-                            <a href="#">
-                                <span class="material-symbols-rounded btn-approve" title="Approve">done</span>
-                            </a>
-                            <a href="#">
-                                <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
-                            </a>
-                            <a href="#">
-                                <span class="material-symbols-rounded btn-delete" title="Delete">delete</span>
-                            </a>
+                            <span class="material-symbols-rounded btn-approve">done</span>
+                            <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
+                            <span class="material-symbols-rounded btn-delete">delete</span>
                         </div>
                     </td>
                 </tr>
             </tbody>
-
         </table>
+    
+        <script th:inline="javascript">
+            /*<![CDATA[*/
+            var pendingPositions =
+                /*[[${pendingPositions}]]*/
+                /*]]>*/
+                $("#pendingApprovalFilter").on("keyup", function () {
+                    var value = $(this).val();
+                    var table = document.getElementById("pendingPositionsData");
+                    var filteredData = filterPositions(value, pendingPositions);
+                    rebuildPositionsTable(filteredData, table);
+                });
+        </script>
     </div>
     <hr />
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        var pendingPositions =
-            /*[[${pendingPositionsData}]]*/
-            /*]]>*/
-            $("#positionsFilter").on("keyup", function () {
-                var value = $(this).val();
-                rebuildTable(filterPositions(value, pendingPositions));
-            });
-    </script>
+
 </div>
 
 
 <!-- Current (approved) Jobs & Placements -->
 <div th:fragment="approved" id="approved" xmlns:th="http://www.thymeleaf.org">
-    <h1 class="table-heading">Current</h1>
+
+    <div class="row">
+        <div class="col-12 col-md-4 col-lg-4 col-xl-3">
+            <h1 class="table-heading">Current</h1>
+        </div>
+        <div class="col-12 col-md-7 col-lg-8 col-xl-6">
+            <input class="form-control" id="approvedFilter" type="text" name="keyword" placeholder="Filter Positions..." /></div>
+        <div class="col-md-1 col-xl-3"></div>
+    </div>
+
     <div class="row table-container">
         <table class="table table-striped table-hover">
             <thead>
@@ -71,14 +83,14 @@
                     <th class="text-center">Manage</th>
                 </tr>
             </thead>
-            <tbody id="currentPositionsData">
-                <tr>
-                    <th scope="row">1</th>
-                    <td>Job</td>
-                    <td>Microsoft</td>
-                    <td>1/12/2022</td>
-                    <td>24/12/2022</td>
-                    <td>Just a one month job</td>
+            <tbody id="approvedPositionsData">
+                <tr th:each="pos : ${approvedPositions}">
+                    <th scope="row" th:text="${pos.id}"></th>
+                    <td th:text="${pos.type}">Job</td>
+                    <td th:text="${pos.partner.businessName}">Microsoft</td>
+                    <td th:text="${#dates.format(pos.startDate, 'dd/MM/yyyy')}">1/12/2022</td>
+                    <td th:text="${#dates.format(pos.endDate, 'dd/MM/yyyy')}">24/12/2022</td>
+                    <td th:text="${pos.description}">Just a one month job</td>
                     <td style="display: flex;">
                         <div class="mx-auto">
                             <span class="material-symbols-rounded btn-edit" title="Edit">edit</span>
@@ -87,17 +99,20 @@
                     </td>
                 </tr>
             </tbody>
-
         </table>
+
+        <script th:inline="javascript">
+            /*<![CDATA[*/
+            var positions =
+                /*[[${approvedPositions}]]*/
+                /*]]>*/
+                $("#approvedFilter").on("keyup", function () {
+                    var value = $(this).val();
+                    var table = document.getElementById("approvedPositionsData");
+                    var filteredData = filterPositions(value, positions);
+                    rebuildPositionsTable(filteredData, table);
+                });
+        </script>
     </div>
-    <script th:inline="javascript">
-        /*<![CDATA[*/
-        var currentPositions =
-            /*[[${currentPositionsData}]]*/
-            /*]]>*/
-            $("#positionsFilter").on("keyup", function () {
-                var value = $(this).val();
-                rebuildTable(filterPositions(value, currentPositions));
-            });
-    </script>
+
 </div>
