--- a/web/src/main/resources/templates/fragments/scripts.html
+++ b/web/src/main/resources/templates/fragments/scripts.html
@@ -1,4 +1,5 @@
 <div th:fragment="scripts" xmlns:th="http://www.thymeleaf.org">
     <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js}"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
     <script th:src="@{~/js/scripts.js}"></script>
 </div>
