--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
             <div class="position-absolute top-50 start-50 translate-middle p-2 m-6 size">
                 <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
                     <div class="carousel-indicators">
-                        <buton type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                             aria-current="true" aria-label="Slide 1"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                         <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
@@ -51,7 +51,7 @@
                     <br>
                 </div>
                 <div class="center">
-                    <button type ="button" class="btn btn-primary sign-up-button">Sign Up Free Today!</button>
+                    <a type="button" class="btn btn-primary sign-up-button" th:href="@{/register}">Sign Up Free Today!</a>
                 </div>
                 <hr>
             </div>
