Removed call to bg-light

--- a/web/src/main/resources/templates/fragments/navigation.html
+++ b/web/src/main/resources/templates/fragments/navigation.html
@@ -1,4 +1,4 @@
-<nav th:fragment="top-navigation" class="navbar navbar-expand-lg navbar-light bg-light border-bottom nav-bar-style"
+<nav th:fragment="top-navigation" class="navbar navbar-expand-lg navbar-light border-bottom nav-bar-style"
     xmlns:th="http://www.thymeleaf.org">
     <div class="container-fluid">
         <button class="btn btn-outline-secondary" id="sidebarToggle">Menu</button>
