--- a/web/src/main/resources/templates/educator/forum/overview.html
+++ b/web/src/main/resources/templates/educator/forum/overview.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments/head"></head>
+<link th:href="@{~/css/forum.css}" rel="stylesheet" />
 <body>
+<!-- Top Navigation Bar -->
+<div th:replace="fragments/navigation :: top-navigation"></div>
 <div class="d-flex" id="wrapper">
+
   <!-- Sidebar Menu -->
   <div th:replace="fragments/navigation :: sidebar"></div>
+
   <div id="page-content-wrapper">
-    <!-- Top Navigation Bar -->
-    <div th:replace="fragments/navigation :: top-navigation"></div>
+
     <div class="container-fluid">
       <!-- breadcrumb -->
       <nav aria-label="breadcrumb">
