--- a/web/src/main/resources/templates/fragments/forum.html
+++ b/web/src/main/resources/templates/fragments/forum.html
@@ -1,51 +1,69 @@
+<!-- Create a new post button -->
 <div th:fragment="create-post-button" xmlns:th="http://www.thymeleaf.org">
-  <a th:href="@{forum/content}" class="btn btn-success">
+  <a th:href="@{forum/content}" class="btn new-post-button">
     <span class="material-symbols-outlined">chat</span>
     <span>Post a New Question</span>
   </a>
 </div>
 
+<!-- Forum category overview -->
 <div th:fragment="category-overview" xmlns:th="http://www.thymeleaf.org">
-  <!--
-  Todo: List of each category with
-      - description
-      - N recent posts
-      - Link to the category thread
-  -->
+
+  <!-- This will become the th:each item -->
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingOne">
         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          Accordion Item #1 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab adipisci aliquam debitis, delectus distinctio iste minus nihil non officia officiis, omnis optio pariatur quibusdam reiciendis sunt! Aliquid consectetur deleniti ea, eveniet excepturi expedita fuga iusto maiores maxime, necessitatibus nemo obcaecati quasi qui quidem, quisquam tenetur ullam veritatis? Earum, eum repellat!
+            General Discussion
         </button>
       </h2>
       <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <p>
+            This is ugly as crap but some kind of description would go here
+          </p>
+
+          <div class="recent-posts">
+            <h2>Recent Posts:</h2>
+            <ul class="preview-list">
+              <li class="post-preview">
+                <a href="#">This post title is fine because it's short</a>
+              </li>
+              <li class="post-preview">
+                <a href="#">But this post title is excessively long and would extend beyond the bounds of our "recent posts" container</a>
+              </li>
+            </ul>
+          </div>
+
         </div>
       </div>
     </div>
+
+    <!-- Only here for demo purposes -->
     <div class="accordion-item">
       <h2 class="accordion-header" id="headingTwo">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          Accordion Item #2
+        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
+          Resume Help Q&A
         </button>
       </h2>
-      <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div id="collapseTwo" class="accordion-collapse collapse show" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
         <div class="accordion-body">
-          <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-        </div>
-      </div>
-    </div>
-    <div class="accordion-item">
-      <h2 class="accordion-header" id="headingThree">
-        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-          Accordion Item #3
-        </button>
-      </h2>
-      <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-        <div class="accordion-body">
-          <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+          <p>
+            This is ugly as crap but some kind of description would go here
+          </p>
+
+          <div class="recent-posts">
+            <h2>Recent Posts:</h2>
+            <ul class="preview-list">
+              <li class="post-preview">
+                <a href="#">This post title is fine because it's short</a>
+              </li>
+              <li class="post-preview">
+                <a href="#">But this post title is excessively long and would extend beyond the bounds of our "recent posts" container</a>
+              </li>
+            </ul>
+          </div>
+
         </div>
       </div>
     </div>
