Add registration page for educators and students.

--- a/web/src/main/resources/static/css/navigation.css
+++ b/web/src/main/resources/static/css/navigation.css
@@ -1,6 +1,7 @@
 .nav-bar-style {
     background-color: #003057 !important;
     color: #FFFFFF !important;
+    position: relative;
 }
 
 .nav-bar-title {
