--- a/web/src/main/resources/templates/fragments/head.html
+++ b/web/src/main/resources/templates/fragments/head.html
@@ -1,5 +1,5 @@
 <head th:fragment="head" xmlns:th="http://www.thymeleaf.org">
-  <title th:text="|Wilma - ${#strings.capitalize(currentPage)}|">Title here</title>
+  <title th:text="|WILMA - ${#strings.capitalize(currentPage)}|">Title here</title>
   <!-- HTML Meta Tags -->
   <meta charset="utf-8" />
   <meta name="title" content="WILMA - Work Integrated Learning Management App">
@@ -19,8 +19,9 @@
   <!-- Resource links -->
   <link rel="icon" type="image/x-icon" th:href="@{~/assets/favicon.ico}" />
   <!-- CSS only -->
-  <link th:href="@{~/css/styles.css}" rel="stylesheet" />
-  <link th:href="@{~/css/navigation.css}" rel="stylesheet"/>
+  <link th:href="@{~/css/styles.css}" rel="stylesheet"/>
+  <link th:href="@{~/css/navigation.css}"rel="stylesheet"/>
+  <link th:href="@{~/css/common.css}"rel="stylesheet"/>
   <!-- JavaScript Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
