--- a/web/src/main/resources/templates/fragments/educatorForm.html
+++ b/web/src/main/resources/templates/fragments/educatorForm.html
@@ -13,24 +13,38 @@
             </div>
             <input type="hidden" name="userType" value="EDUCATOR">
             <div class="col-12"></div>
-            <div class="col-md-4 ms-5 m-3">
-                <label for="staffId" class="form-label">CQU Staff ID</label>
-                <input type="text" class="form-control" id="staffId" aria-describedby="staffId">
+            <div class="col-md-5 ms-5 m-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" aria-describedby="username">
             </div>
-            <div class="col-md-6 m-3"></div>
-            <div class="col-md-6 ms-5 m-3">
+            <div class="col-md-6"></div>
+            <div class="col-5 ms-5 me-3">
+                <label for="email" class="form-label">E-mail</label>
+                <input type="email" class="form-control" id="emailAddress" aria-describedby="emailAddress">
+                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="col-5 ms-5 m-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" aria-describedby="password">
+                <small id="passwordHelp" class="form-text text-muted">
+                    Must be 8-20 characters long.
+                </small>
+            </div>
+            <div class="col-md-5 ms-5 m-3">
                 <label for="firstName" class="form-label">First Name</label>
                 <input type="text" class="form-control" id="firstName" aria-describedby="firstName">
             </div>
-            <div class="col-md-4 m-3">
-                <label for="contactNumber" class="form-label">Contact Number</label>
-                <input type="text" class="form-control" id="contactNumber" aria-describedby="contactNumber">
-            </div>
-            <div class="col-md-6 ms-5 m-3">
+            
+            <div class="col-md-5 ms-5 m-3">
                 <label for="lastName" class="form-label">Last Name</label>
                 <input type="text" class="form-control" id="lastName" aria-describedby="lastName">
             </div>
-            <div class="col-md-4 m-3">
+            <div class="col-md-3 ms-5 m-3">
+                <label for="contactNumber" class="form-label">Contact Number</label>
+                <input type="text" class="form-control" id="contactNumber" aria-describedby="contactNumber">
+            </div>
+            
+            <div class="col-md-4 ms-5 m-3">
                 <label for="discipline" class="form-label">Discipline</label>
                 <select class="form-select" aria-label="Discipline">
                     <option selected>Select...</option>
@@ -40,17 +54,9 @@
                     <option value="Project Management">Project Management</option>
                 </select>
             </div>
-            <div class="col-6 ms-5 me-3 mb-1">
-                <label for="email" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="emailAddress" aria-describedby="emailAddress">
-                <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-            </div>
-            <div class="col-4 ms-3 mb-1">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" aria-describedby="password">
-                <small id="passwordHelp" class="form-text text-muted">
-                    Must be 8-20 characters long.
-                </small>
+            <div class="col-md-2 ms-5 m-3">
+                <label for="staffId" class="form-label">CQU Educator ID</label>
+                <input type="text" class="form-control" id="staffId" aria-describedby="staffId">
             </div>
             <div class="form-group m-3 text-center">
                 <button type="submit" class="btn form-button">Register</button>
