Add partner registration form and adjust formatting

--- a/web/src/main/resources/templates/fragments/educatorForm.html
+++ b/web/src/main/resources/templates/fragments/educatorForm.html
@@ -1,7 +1,7 @@
 <!-- Educator Form -->
 <div xmlns:th="http://www.thymeleaf.org" th:fragment="educatorForm">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">   
-    
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
+
     <div class="w-50 mx-auto">
         <form
             id="educator-form"
@@ -11,7 +11,7 @@
             <div class="form-icon center mt-3">
                 <span><i class="icon icon-user"></i></span>
             </div>
-            <input type="hidden" name="userType" value="EDUCATOR">
+            <input type="hidden" name="userType" value="Educator">
             <div class="col-12"></div>
             <div class="col-md-5 ms-5 m-3">
                 <label for="username" class="form-label">Username</label>
@@ -58,9 +58,10 @@
                 <label for="staffId" class="form-label">CQU Educator ID</label>
                 <input type="text" class="form-control" id="staffId" aria-describedby="staffId">
             </div>
-            <div class="form-group m-3 text-center">
+            <div class="form-group mb-3 text-center">
                 <button type="submit" class="btn form-button">Register</button>
             </div>
         </form>
     </div>
+    <div class="m-3"></div>
 </div>
