--- a/web/src/main/resources/templates/fragments/partnerForm.html
+++ b/web/src/main/resources/templates/fragments/partnerForm.html
@@ -1,40 +1,71 @@
-<!-- Partner Form -->
-<div xmlns:th="http://www.thymeleaf.org" th:fragment="partnerForm">
-    <form
-        id="partner-form"
-        class="w-50 mx-auto"
-        th:action="@{/register}"
-
-        method="post"
-        hidden>
-
-    <input type="hidden" name="userType" value="PARTNER">
-    <div class="mb-3">
-        <label for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" id="name" aria-describedby="name">
-    </div>
-
-    <div class="mb-3">
-        <label for="ABN" class="form-label">ABN</label>
-        <input type="text" class="form-control" id="ABN" aria-describedby="ABN">
-    </div>
-
-    <div class="mb-3">
-        <label for="contactPerson" class="form-label">Contact Person</label>
-        <input type="text" class="form-control" id="contactPerson" aria-describedby="contactPerson">
-    </div>
-
-    <div class="mb-3">
-        <label for="emailAddress" class="form-label">Email Address</label>
-        <input type="email" class="form-control" id="emailAddress" aria-describedby="emailHelp">
-        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
-
-    <div class="mb-3">
-        <label for="phone" class="form-label">Phone</label>
-        <input type="text" class="form-control" id="phone" aria-describedby="phone">
-    </div>
-
-    <button type="submit" class="btn btn-primary">Register</button>
-    </form>
-</div>
+<!-- Partner Form -->       
+        <div xmlns:th="http://www.thymeleaf.org" th:fragment="partnerForm">
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
+        
+            <div class="w-50 mx-auto">
+                <form
+                id="partner-form"
+                class="row g-3 border form-border mt-3"
+                th:action="@{/register}"
+                method="post">
+                    <div class="form-icon center mt-3">
+                        <span><i class="icon icon-user"></i></span>
+                    </div>
+                    <input type="hidden" name="userType" value="Partner">
+                    <div class="col-12"></div>
+                    <div class="col-md-5 ms-5 m-3">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="username" aria-describedby="username">
+                    </div>
+                    <div class="col-md-6"></div>
+                    <div class="col-5 ms-5 me-3">
+                        <label for="email" class="form-label">E-mail</label>
+                        <input type="email" class="form-control" id="emailAddress" aria-describedby="emailAddress">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <div class="col-5 ms-5 m-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" aria-describedby="password">
+                        <small id="passwordHelp" class="form-text text-muted">
+                            Must be 8-20 characters long.
+                        </small>
+                    </div>
+                    <div class="col-md-5 ms-5 m-3">
+                        <label for="firstName" class="form-label">First Name</label>
+                        <input type="text" class="form-control" id="firstName" aria-describedby="firstName">
+                    </div>
+                    
+                    <div class="col-md-5 ms-5 m-3">
+                        <label for="lastName" class="form-label">Last Name</label>
+                        <input type="text" class="form-control" id="lastName" aria-describedby="lastName">
+                    </div>
+                    <div class="col-md-5 ms-5 m-3">
+                        <label for="businessName" class="form-label">Business Name</label>
+                        <input type="text" class="form-control" id="businessName" aria-describedby="businessName">
+                    </div>
+                    <div class="col-md-5 ms-5 m-3">
+                        <label for="contactNumber" class="form-label">Contact Number</label>
+                        <input type="text" class="form-control" id="contactNumber" aria-describedby="contactNumber">
+                    </div>
+                    <div class="col-md-5 ms-5 m-3">
+                        <label for="abn" class="form-label">Australian Business Number (ABN)</label>
+                        <input type="text" class="form-control" id="abn" aria-describedby="abn">
+                    </div>
+                    <div class="col-md-5 ms-5 m-3">
+                        <label for="position" class="form-label">Placement Position Discipline</label>
+                        <select class="form-select" aria-label="position">
+                            <option selected>Select...</option>
+                            <option value="Software Development">Software Development</option>
+                            <option value="Networking">Networking</option>
+                            <option value="Business Analysis">Business Analysis</option>
+                            <option value="Project Management">Project Management</option>
+                        </select>
+                    </div>
+                    <div class="form-group mb-3 text-center">
+                        <button type="submit" class="btn form-button">Register</button>
+                    </div>
+                </form>
+            </div>
+            <div class="m-3"></div>
+        </div>
+        
