--- a/web/src/main/resources/templates/fragments/studentForm.html
+++ b/web/src/main/resources/templates/fragments/studentForm.html
@@ -11,7 +11,7 @@
             <div class="form-icon center mt-3">
                 <span><i class="icon icon-user"></i></span>
             </div>
-            <input type="hidden" name="userType" value="STUDENT">
+            <input type="hidden" name="userType" value="Student">
             <div class="col-12"></div>
             <div class="col-md-5 ms-5 m-3">
                 <label for="username" class="form-label">Username</label>
@@ -58,10 +58,10 @@
                 <label for="studentId" class="form-label">CQU Student ID</label>
                 <input type="text" class="form-control" id="studentId" aria-describedby="studentId">
             </div>
-            <div class="form-group m-3 text-center">
+            <div class="form-group mb-3 text-center">
                 <button type="submit" class="btn form-button">Register</button>
             </div>
         </form>
     </div>
-    <div class="mt-3"></div>
+    <div class="m-3"></div>
 </div>
