Add expected graduation date picker to student form

--- a/web/src/main/resources/templates/fragments/educatorForm.html
+++ b/web/src/main/resources/templates/fragments/educatorForm.html
@@ -19,8 +19,8 @@
             </div>
             <div class="col-md-6"></div>
             <div class="col-5 ms-5 me-3">
-                <label for="email" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="emailAddress" aria-describedby="emailAddress">
+                <label for="emailAddress" class="form-label">E-mail</label>
+                <input type="emailAddress" class="form-control" id="emailAddress" aria-describedby="emailAddress">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="col-5 ms-5 m-3">
@@ -46,7 +46,7 @@
             
             <div class="col-md-4 ms-5 m-3">
                 <label for="discipline" class="form-label">Discipline</label>
-                <select class="form-select" aria-label="Discipline">
+                <select class="form-select" aria-label="discipline">
                     <option selected>Select...</option>
                     <option value="Software Development">Software Development</option>
                     <option value="Networking">Networking</option>
