--- a/web/src/main/resources/templates/fragments/partnerForm.html
+++ b/web/src/main/resources/templates/fragments/partnerForm.html
@@ -19,8 +19,8 @@
                     </div>
                     <div class="col-md-6"></div>
                     <div class="col-5 ms-5 me-3">
-                        <label for="email" class="form-label">E-mail</label>
-                        <input type="email" class="form-control" id="emailAddress" aria-describedby="emailAddress">
+                        <label for="emailAddress" class="form-label">E-mail</label>
+                        <input type="emailAddress" class="form-control" id="emailAddress" aria-describedby="emailAddress">
                         <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                     </div>
                     <div class="col-5 ms-5 m-3">
