--- a/web/src/main/resources/templates/fragments/studentForm.html
+++ b/web/src/main/resources/templates/fragments/studentForm.html
@@ -17,10 +17,13 @@
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" aria-describedby="username">
             </div>
-            <div class="col-md-6"></div>
+            <div class="col-md-5 ms-5 m-3">
+                <label for="expectedGraduationDate" class="form-label">Expected Graduation Date</label>
+                <input type="date" class="form-control" id="expectedGraduationDate">
+            </div>
             <div class="col-5 ms-5 me-3">
-                <label for="email" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="emailAddress" aria-describedby="emailAddress">
+                <label for="emailAddress" class="form-label">E-mail</label>
+                <input type="emailAddress" class="form-control" id="emailAddress" aria-describedby="emailAddress">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="col-5 ms-5 m-3">
@@ -46,7 +49,7 @@
             
             <div class="col-md-4 ms-5 m-3">
                 <label for="discipline" class="form-label">Discipline</label>
-                <select class="form-select" aria-label="Discipline">
+                <select class="form-select" aria-label="discipline">
                     <option selected>Select...</option>
                     <option value="Software Development">Software Development</option>
                     <option value="Networking">Networking</option>
