--- a/web/src/main/resources/templates/register.html
+++ b/web/src/main/resources/templates/register.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="fragments/head"></head>
-<body>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
+<body onload="showFragment('Educator')">
 
     <div th:replace="fragments/navigation :: top-navigation"></div>
 <div>
