--- a/web/src/main/resources/templates/fragments/studentForm.html
+++ b/web/src/main/resources/templates/fragments/studentForm.html
@@ -1,26 +1,27 @@
 <!-- Student Form -->
 <div xmlns:th="http://www.thymeleaf.org" th:fragment="studentForm">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.min.css" rel="stylesheet">
 
     <div class="w-50 mx-auto">
         <form
-            id="educator-form"
+            id="student-form"
             class="row g-3 border form-border mt-3"
             th:action="@{/register}"
             method="post">
+
             <div class="form-icon center mt-3">
                 <span><i class="icon icon-user"></i></span>
             </div>
+
             <input type="hidden" name="userType" value="STUDENT">
             <div class="col-12"></div>
             <div class="col-md-5 ms-5 m-3">
-                <label for="staffId" class="form-label">Username</label>
-                <input type="text" class="form-control" id="staffId" aria-describedby="staffId">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" aria-describedby="username">
             </div>
             <div class="col-md-6"></div>
             <div class="col-5 ms-5 me-3">
                 <label for="email" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="emailAddress" aria-describedby="emailAddress">
+                <input type="email" class="form-control" id="email" aria-describedby="email">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="col-5 ms-5 m-3">
@@ -46,7 +47,7 @@
             
             <div class="col-md-4 ms-5 m-3">
                 <label for="discipline" class="form-label">Discipline</label>
-                <select class="form-select" aria-label="Discipline">
+                <select class="form-select" aria-label="discipline" id="discipline">
                     <option selected>Select...</option>
                     <option value="Software Development">Software Development</option>
                     <option value="Networking">Networking</option>
@@ -55,8 +56,8 @@
                 </select>
             </div>
             <div class="col-md-2 ms-5 m-3">
-                <label for="staffId" class="form-label">CQU Student ID</label>
-                <input type="text" class="form-control" id="staffId" aria-describedby="staffId">
+                <label for="studentId" class="form-label">CQU Student ID</label>
+                <input type="text" class="form-control" id="studentId" aria-describedby="studentId">
             </div>
             <div class="form-group m-3 text-center">
                 <button type="submit" class="btn form-button">Register</button>
