Refactored for value ids

--- a/web/src/main/resources/templates/fragments/partnerForm.html
+++ b/web/src/main/resources/templates/fragments/partnerForm.html
@@ -10,8 +10,8 @@
 
     <input type="hidden" name="userType" value="PARTNER">
     <div class="mb-3">
-        <label for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" id="name" aria-describedby="name">
+        <label for="businessName" class="form-label">Name</label>
+        <input type="text" class="form-control" id="businessName" aria-describedby="businessName">
     </div>
 
     <div class="mb-3">
@@ -25,14 +25,14 @@
     </div>
 
     <div class="mb-3">
-        <label for="emailAddress" class="form-label">Email Address</label>
-        <input type="email" class="form-control" id="emailAddress" aria-describedby="emailAddress">
+        <label for="partnerEmail" class="form-label">Email Address</label>
+        <input type="email" class="form-control" id="partnerEmail" aria-describedby="partnerEmail">
         <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
     </div>
 
     <div class="mb-3">
-        <label for="phone" class="form-label">Phone</label>
-        <input type="text" class="form-control" id="phone" aria-describedby="phone">
+        <label for="partnerPhone" class="form-label">Phone</label>
+        <input type="text" class="form-control" id="partnerPhone" aria-describedby="partnerPhone">
     </div>
 
     <button type="submit" class="btn btn-primary">Register</button>
