--- a/web/src/main/resources/templates/fragments/studentForm.html
+++ b/web/src/main/resources/templates/fragments/studentForm.html
@@ -15,39 +15,39 @@
             <input type="hidden" name="userType" value="STUDENT">
             <div class="col-12"></div>
             <div class="col-md-5 ms-5 m-3">
-                <label for="username" class="form-label">Username</label>
-                <input type="text" class="form-control" id="username" aria-describedby="username">
+                <label for="studentUsername" class="form-label">Username</label>
+                <input type="text" class="form-control" id="studentUsername" aria-describedby="studentUsername">
             </div>
             <div class="col-md-6"></div>
             <div class="col-5 ms-5 me-3">
-                <label for="email" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email">
+                <label for="studentEmail" class="form-label">E-mail</label>
+                <input type="email" class="form-control" id="studentEmail" aria-describedby="studentEmail">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="col-5 ms-5 m-3">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" aria-describedby="password">
+                <label for="studentPassword" class="form-label">Password</label>
+                <input type="password" class="form-control" id="studentPassword" aria-describedby="studentPassword">
                 <small id="passwordHelp" class="form-text text-muted">
                     Must be 8-20 characters long.
                 </small>
             </div>
             <div class="col-md-5 ms-5 m-3">
-                <label for="firstName" class="form-label">First Name</label>
-                <input type="text" class="form-control" id="firstName" aria-describedby="firstName">
+                <label for="studentFirstName" class="form-label">First Name</label>
+                <input type="text" class="form-control" id="studentFirstName" aria-describedby="studentFirstName">
             </div>
             
             <div class="col-md-5 ms-5 m-3">
-                <label for="lastName" class="form-label">Last Name</label>
-                <input type="text" class="form-control" id="lastName" aria-describedby="lastName">
+                <label for="studentLastName" class="form-label">Last Name</label>
+                <input type="text" class="form-control" id="studentLastName" aria-describedby="studentLastName">
             </div>
             <div class="col-md-3 ms-5 m-3">
-                <label for="contactNumber" class="form-label">Contact Number</label>
-                <input type="text" class="form-control" id="contactNumber" aria-describedby="contactNumber">
+                <label for="studentPhone" class="form-label">Contact Number</label>
+                <input type="text" class="form-control" id="studentPhone" aria-describedby="studentPhone">
             </div>
             
             <div class="col-md-4 ms-5 m-3">
-                <label for="discipline" class="form-label">Discipline</label>
-                <select class="form-select" aria-label="discipline" id="discipline">
+                <label for="studentDiscipline" class="form-label">Discipline</label>
+                <select class="form-select" aria-label="studentDiscipline" id="studentDiscipline">
                     <option selected>Select...</option>
                     <option value="Software Development">Software Development</option>
                     <option value="Networking">Networking</option>
