--- a/web/src/main/resources/templates/fragments/educatorForm.html
+++ b/web/src/main/resources/templates/fragments/educatorForm.html
@@ -20,20 +20,20 @@
             </div>
             <div class="col-md-6 m-3"></div>
             <div class="col-md-6 ms-5 m-3">
-                <label for="firstName" class="form-label">First Name</label>
-                <input type="text" class="form-control" id="firstName" aria-describedby="firstName">
+                <label for="educatorFirstName" class="form-label">First Name</label>
+                <input type="text" class="form-control" id="educatorFirstName" aria-describedby="educatorFirstName">
             </div>
             <div class="col-md-4 m-3">
-                <label for="contactNumber" class="form-label">Contact Number</label>
-                <input type="text" class="form-control" id="contactNumber" aria-describedby="contactNumber">
+                <label for="educatorPhone" class="form-label">Contact Number</label>
+                <input type="text" class="form-control" id="educatorPhone" aria-describedby="educatorPhone">
             </div>
             <div class="col-md-6 ms-5 m-3">
-                <label for="lastName" class="form-label">Last Name</label>
-                <input type="text" class="form-control" id="lastName" aria-describedby="lastName">
+                <label for="educatorLastName" class="form-label">Last Name</label>
+                <input type="text" class="form-control" id="educatorLastName" aria-describedby="educatorLastName">
             </div>
             <div class="col-md-4 m-3">
-                <label for="discipline" class="form-label">Discipline</label>
-                <select class="form-select" aria-label="Discipline" id="discipline">
+                <label for="educatorDiscipline" class="form-label">Discipline</label>
+                <select class="form-select" aria-label="educatorDiscipline" id="educatorDiscipline">
                     <option selected>Select...</option>
                     <option value="Software Development">Software Development</option>
                     <option value="Networking">Networking</option>
@@ -42,13 +42,13 @@
                 </select>
             </div>
             <div class="col-6 ms-5 me-3 mb-1">
-                <label for="emailAddress" class="form-label">E-mail</label>
-                <input type="email" class="form-control" id="emailAddress" aria-describedby="emailAddress">
+                <label for="educatorEmail" class="form-label">E-mail</label>
+                <input type="email" class="form-control" id="educatorEmail" aria-describedby="educatorEmail">
                 <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="col-4 ms-3 mb-1">
-                <label for="password" class="form-label">Password</label>
-                <input type="password" class="form-control" id="password" aria-describedby="password">
+                <label for="educatorPassword" class="form-label">Password</label>
+                <input type="password" class="form-control" id="educatorPassword" aria-describedby="educatorPassword">
                 <small id="passwordHelp" class="form-text text-muted">
                     Must be 8-20 characters long.
                 </small>
