Updated about us message

--- a/web/src/main/resources/templates/about.html
+++ b/web/src/main/resources/templates/about.html
@@ -11,6 +11,14 @@
                     <p>
                         We are a group of students from Central Queensland University completing our final 
                         capstone project, marking the end of a 3-year Bachelor of Information Technology degree.
+                        <br>
+                        <br>
+                        This application is an example of our ability to design, develop and implement a high
+                        quality application while working cohesively as a team. 
+                        <br>
+                        <br>
+                        The WILMA application aims to help educators and industry partners of CQU collaborate
+                        to provide work placement and job opportunities for students completing their studies.
                         <p>
                             <hr>
                             Nicholas McGuffin - 1211545
