Minor change to about us sytling

--- a/web/src/main/resources/templates/about.html
+++ b/web/src/main/resources/templates/about.html
@@ -7,7 +7,7 @@
         <div class="container py-5">
             <div class="row h-100 align-items-center py-5 form container">
                 <div class="col-lg-6">
-                    <h1 class="display-4">About Us</h1>
+                    <h1 class="display-4 header-style center">About Us</h1>
                     <p>
                         We are a group of students from Central Queensland University completing our final 
                         capstone project, marking the end of a 3-year Bachelor of Information Technology degree.
@@ -21,13 +21,10 @@
                         to provide work placement and job opportunities for students completing their studies.
                         <p>
                             <hr>
-                            Nicholas McGuffin - 1211545
-                            <br>
-                            Nathan Snow - 12060962
-                            <br>
-                            Rory Allen - 12149026
-                            <br>
-                            Nathan Downes - 12046570
+                            <p class="center">Nicholas McGuffin - nicholas.mcguffin@cqumail.com</p>
+                            <p class="center">Nathan Snow - nathan.snow@cqumail.com</p>
+                            <p class="center">Rory Allen - rory.allen@cqumail.com</p>
+                            <p class="center">Nathan Downes - nathan.downes@cqumail.com</p>
                             <hr>
                         </p>
                     </p>
