Changed "Dashboard" to "Profile" Removed DOB

--- a/web/src/main/resources/templates/educator/EducatorProfile.html
+++ b/web/src/main/resources/templates/educator/EducatorProfile.html
@@ -16,7 +16,7 @@
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-                    <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
+                    <li class="breadcrumb-item active" aria-current="page">Profile</li>
                 </ol>
             </nav>
         </div>
@@ -40,14 +40,6 @@
 
                             <div class="col-5">
                                 <p >Tony The Immortal</p>
-                            </div>
-                        </div>
-                        <div class="row border-bottom">
-                            <div class="col-4">
-                                <p>Date of Birth: </p>
-                            </div>
-                            <div class="col-5">
-                                <p >23/12/1295</p>
                             </div>
                         </div>
                         <div class="row border-bottom">
